changing image max width

--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -34,7 +34,8 @@
       "link": {
         "url": "/small-appliances/coffee-makers"
       },
-      "alt": "Coffee Makers Collection"
+      "alt": "Coffee Makers Collection",
+      "maxWidth": "100%"
     }
   },
 
@@ -44,7 +45,8 @@
       "link": {
         "url": "/small-appliances/coffee-makers"
       },
-      "alt": "Coffee Makers Collection"
+      "alt": "Coffee Makers Collection",
+      "maxWidth": "100%"
     }
   }
 }
