--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -1,6 +1,6 @@
 {
   "store.product": {
-    "children": ["breadcrumb", "flex-layout.row#main"]
+    "children": ["breadcrumb", "flex-layout.row#main", "shelf.relatedProducts"]
   },
 
   "flex-layout.row#main": {
@@ -10,7 +10,7 @@
     "children": ["flex-layout.col#left", "flex-layout.col#right"]
   },
   "flex-layout.col#left": {
-    "children": ["product-images"]
+    "children": ["stack-layout#brand"]
   },
   "flex-layout.col#right": {
     "props": {
@@ -33,5 +33,14 @@
   },
   "flex-layout.row#qty-sku": {
     "children": ["sku-selector", "product-quantity", "shipping-simulator"]
+  },
+  "stack-layout#brand": {
+    "children": ["product-images", "product-brand"]
+  },
+  "product-brand": {
+    "props": {
+      "height": 30,
+      "displayMode": "logo"
+    }
   }
 }
